samples/_failures_safe/1761546351_ce4e99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1cfdd6cb.c: In function ‘main’:
./samples/SAFE/__tmp_1cfdd6cb.c:178:5: error: expected identifier or ‘(’ at end of input
  178 |     Matrix *
      |     ^~~~~~
./samples/SAFE/__tmp_1cfdd6cb.c:178:5: error: expected declaration or statement at end of input
